--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav>
-        <img src="NCEA logo.png" alt="">
+        <img src="ncealogo.png" alt="">
          <div class="navigation">
         <ul>
             <li><a href="index.html">Home</a></li>
