--- a/video.html
+++ b/video.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Agdasima&family=Open+Sans&family=Poppins:ital,wght@0,200;0,300;1,200&display=swap" rel="stylesheet">
 <body>
     <nav>
-        <img src="NCEA logo.png" alt="">
+        <img src="ncealogo.png" alt="">
          <div class="navigation">
         <ul>
             <li><a href="index.html">Home</a></li>
