--- a/video.html
+++ b/video.html
@@ -35,6 +35,8 @@
     <h3>This video tells you little more about NCEA :)</h3>
     <video src="NCEA Video.mp4" controls></video>
     <controls style="width: 500%;"></video>
+       
+        <a href= https://www.nzqa.govt.nz/ncea/understanding-ncea/how-ncea-works/video/</a>
    
     
 
