--- a/video.html
+++ b/video.html
@@ -36,7 +36,7 @@
     <video src="NCEA Video.mp4" controls></video>
     <controls style="width: 500%;"></video>
        
-        <a href= https://www.nzqa.govt.nz/ncea/understanding-ncea/how-ncea-works/video/</a>
+        <a href= https://www.youtube.com/watch?v=utz2MOrtRQU&pp=ygUOaG93IG5jZWEgd29ya3M%3D</a>
    
     
 
