--- a/video.html
+++ b/video.html
@@ -36,6 +36,8 @@
     <h3>This video tells you little more about NCEA :)</h3>
     <video src="NCEA Video.mp4" controls></video>
     <controls style="width: 500%;"></video>
+<iframe width="560" height="315" src="https://youtu.be/utz2MOrtRQU" frameborder="0" allowfullscreen></iframe>
+
       
    
     
